objectbox/lib/src/bindings/objectbox-c.dart


  /// /// For stores created outside of this C API, e.g. via C++ or Java, this is how you can use it via C too.
  /// /// Like this, it is OK to use the same store instance (same database) from multiple languages in parallel.
  /// /// Note: the store's life time will still be managed outside of the C API;
  /// /// thus ensure that store is not closed while calling any C function on it.
  /// /// Once you are done with the C specific OBX_store, call obx_store_close() to free any C related resources.
  /// /// This, however, will not close the "core store".
  /// /// @param core_store A pointer to the core C++ ObjectStore, or the native JNI handle for a BoxStore.
  ffi.Pointer<OBX_store> store_wrap(
    ffi.Pointer<ffi.Void> core_store,
  ) {
    _store_wrap ??= _dylib
        .lookupFunction<_c_store_wrap, _dart_store_wrap>('obx_store_wrap');
    return _store_wrap(
      core_store,
    );
  }

  _dart_store_wrap _store_wrap;

  /// /// Look for an entity with the given name in the model and return its Entity ID.
  int store_entity_id(
    ffi.Pointer<OBX_store> store,
    ffi.Pointer<ffi.Int8> entity_name,
  ) {
    _store_entity_id ??=
        _dylib.lookupFunction<_c_store_entity_id, _dart_store_entity_id>(
            'obx_store_entity_id');
    return _store_entity_id(
      store,
      entity_name,
    );
  }

  _dart_store_entity_id _store_entity_id;

  /// /// Return the property id from the property name or 0 if the name is not found
  int store_entity_property_id(
    ffi.Pointer<OBX_store> store,
    int entity_id,
    ffi.Pointer<ffi.Int8> property_name,
  ) {
    _store_entity_property_id ??= _dylib.lookupFunction<
        _c_store_entity_property_id,
        _dart_store_entity_property_id>('obx_store_entity_property_id');
    return _store_entity_property_id(
      store,
      entity_id,
      property_name,
    );
  }

  _dart_store_entity_property_id _store_entity_property_id;

  /// /// Await for all (including future) async submissions to be completed (the async queue becomes idle for a moment).
  /// /// @returns true if all submissions were completed or async processing was not started; false if shutting down
  /// /// @returns false if shutting down or an error occurred
  bool store_await_async_completion(
    ffi.Pointer<OBX_store> store,
  ) {
    _store_await_async_completion ??= _dylib.lookupFunction<
        _c_store_await_async_completion,
        _dart_store_await_async_completion>('obx_store_await_async_completion');
    return _store_await_async_completion(
          store,
        ) !=
        0;
  }

  _dart_store_await_async_completion _store_await_async_completion;

  /// /// Await for previously submitted async operations to be completed (the async queue does not have to become idle).
  /// /// @returns true if all submissions were completed or async processing was not started
  /// /// @returns false if shutting down or an error occurred
  bool store_await_async_submitted(
    ffi.Pointer<OBX_store> store,
  ) {
    _store_await_async_submitted ??= _dylib.lookupFunction<
        _c_store_await_async_submitted,
        _dart_store_await_async_submitted>('obx_store_await_async_submitted');
    return _store_await_async_submitted(
          store,
        ) !=
        0;
  }

  _dart_store_await_async_submitted _store_await_async_submitted;

  /// /// Configure debug logging
  int store_debug_flags(
    ffi.Pointer<OBX_store> store,
    int flags,
  ) {
    _store_debug_flags ??=
        _dylib.lookupFunction<_c_store_debug_flags, _dart_store_debug_flags>(
            'obx_store_debug_flags');
    return _store_debug_flags(
      store,
      flags,
    );
  }

  _dart_store_debug_flags _store_debug_flags;

  /// /// @returns true if the store was opened with a previous commit
  /// /// @see obx_opt_use_previous_commit()
  bool store_opened_with_previous_commit(
    ffi.Pointer<OBX_store> store,
  ) {
    _store_opened_with_previous_commit ??= _dylib.lookupFunction<
            _c_store_opened_with_previous_commit,
            _dart_store_opened_with_previous_commit>(
        'obx_store_opened_with_previous_commit');
    return _store_opened_with_previous_commit(
          store,
        ) !=
        0;
  }

  _dart_store_opened_with_previous_commit _store_opened_with_previous_commit;

  /// /// @param store may be NULL
  int store_close(
    ffi.Pointer<OBX_store> store,
  ) {
    _store_close ??= _dylib
        .lookupFunction<_c_store_close, _dart_store_close>('obx_store_close');
    return _store_close(
      store,
    );
  }

  _dart_store_close _store_close;

  /// /// Create a write transaction (read and write).
  /// /// Transaction creation can be nested (recursive), however only the outermost transaction is relevant on the DB level.
  /// /// @returns NULL if the operation failed, see functions like obx_last_error_code() to get error details; e.g. code
  /// ///               OBX_ERROR_ILLEGAL_STATE will be set if called when inside a read transaction.
  ffi.Pointer<OBX_txn> txn_write(
    ffi.Pointer<OBX_store> store,
  ) {
    _txn_write ??=
        _dylib.lookupFunction<_c_txn_write, _dart_txn_write>('obx_txn_write');
    return _txn_write(
      store,
    );
  }

  _dart_txn_write _txn_write;

  /// /// Create a read transaction (read only).
  /// /// Transaction creation can be nested (recursive), however only the outermost transaction is relevant on the DB level.
  /// /// @returns NULL if the operation failed, see functions like obx_last_error_code() to get error details
  ffi.Pointer<OBX_txn> txn_read(
    ffi.Pointer<OBX_store> store,
  ) {
    _txn_read ??=
        _dylib.lookupFunction<_c_txn_read, _dart_txn_read>('obx_txn_read');
    return _txn_read(
      store,
    );
  }

  _dart_txn_read _txn_read;

  /// /// "Finish" this write transaction successfully and close it, performing a commit if this is the top level
  /// /// transaction and all inner transactions (if any) were also successful (obx_txn_success() was called on them).
  /// /// Because this also closes the given transaction, the given OBX_txn pointer must not be used afterwards.
  /// /// @return OBX_ERROR_ILLEGAL_STATE if the given transaction is not a write transaction.
  int txn_success(
    ffi.Pointer<OBX_txn> txn,
  ) {
    _txn_success ??= _dylib
        .lookupFunction<_c_txn_success, _dart_txn_success>('obx_txn_success');
    return _txn_success(
      txn,
    );
  }

  _dart_txn_success _txn_success;

  /// /// Close (free) the transaction (read or write); the given OBX_txn pointer must not be used afterwards.
  /// /// While this is the only way to release read transactions, this call is also an alternative to call obx_txn_success()
  /// /// on write transactions.
  /// /// In combination with obx_txn_mark_success(), this potentially commits or aborts a write transaction on the DB:
  /// /// 1) If it's an outermost TX and all (inner) TXs were marked successful, this commits the transaction.
  /// /// 2) If this transaction was not marked successful, this aborts the transaction (even if it's an inner TX).
  /// /// If an error is returned (e.g., a commit failed because DB is full), you can assume that the transaction was closed.
  /// /// @param txn may be NULL
  int txn_close(
    ffi.Pointer<OBX_txn> txn,
  ) {
    _txn_close ??=
        _dylib.lookupFunction<_c_txn_close, _dart_txn_close>('obx_txn_close');
    return _txn_close(
      txn,
    );
  }

  _dart_txn_close _txn_close;

  /// /// Abort the underlying transaction immediately and thus frees DB resources.
  /// /// Only obx_txn_close() is allowed to be called on the transaction after calling this.
  int txn_abort(
    ffi.Pointer<OBX_txn> txn,
  ) {
    _txn_abort ??=
        _dylib.lookupFunction<_c_txn_abort, _dart_txn_abort>('obx_txn_abort');
    return _txn_abort(
      txn,
    );
  }

  _dart_txn_abort _txn_abort;

  /// /// Mark the given write transaction as successful or failed.
  /// /// You can call this method multiple times with different values before calling obx_txn_close() on the transaction.
  /// /// @return OBX_ERROR_ILLEGAL_STATE if the given transaction is not a write transaction.
  int txn_mark_success(
    ffi.Pointer<OBX_txn> txn,
    bool wasSuccessful,
  ) {
    _txn_mark_success ??=
        _dylib.lookupFunction<_c_txn_mark_success, _dart_txn_mark_success>(
            'obx_txn_mark_success');
    return _txn_mark_success(
      txn,
      wasSuccessful ? 1 : 0,
    );
  }

  _dart_txn_mark_success _txn_mark_success;

  /// /// @returns NULL if the operation failed, see functions like obx_last_error_code() to get error details
  ffi.Pointer<OBX_cursor> cursor(
    ffi.Pointer<OBX_txn> txn,
    int entity_id,
  ) {
    _cursor ??= _dylib.lookupFunction<_c_cursor, _dart_cursor>('obx_cursor');
    return _cursor(
      txn,
      entity_id,
    );
  }

  _dart_cursor _cursor;

  /// /// @param cursor may be NULL
  int cursor_close(
    ffi.Pointer<OBX_cursor> cursor,
  ) {
    _cursor_close ??=
        _dylib.lookupFunction<_c_cursor_close, _dart_cursor_close>(
            'obx_cursor_close');
    return _cursor_close(
      cursor,
    );
  }

  _dart_cursor_close _cursor_close;

  /// /// Call this when putting an object to generate/prepare an ID for it.
  /// /// @param id_or_zero The ID of the entity. If you pass 0, this will generate a new one.
  /// /// @seealso obx_box_id_for_put()
  int cursor_id_for_put(
    ffi.Pointer<OBX_cursor> cursor,
    int id_or_zero,
  ) {
    _cursor_id_for_put ??=
        _dylib.lookupFunction<_c_cursor_id_for_put, _dart_cursor_id_for_put>(
            'obx_cursor_id_for_put');
    return _cursor_id_for_put(
      cursor,
      id_or_zero,
    );
  }

  _dart_cursor_id_for_put _cursor_id_for_put;

  /// /// Puts the given object data using the given ID.
  /// /// A "put" in ObjectBox follows "insert or update" semantics;
  /// /// New objects (no pre-existing object for given ID) are inserted while existing objects are replaced/updated.
  /// /// @param id non-zero
  int cursor_put(
    ffi.Pointer<OBX_cursor> cursor,
    int id,
    ffi.Pointer<ffi.Void> data,
    int size,
  ) {
    _cursor_put ??= _dylib
        .lookupFunction<_c_cursor_put, _dart_cursor_put>('obx_cursor_put');
    return _cursor_put(
      cursor,
      id,
      data,
      size,
    );
  }

  _dart_cursor_put _cursor_put;

  /// /// Like put obx_cursor_put(), but takes an additional parameter (4th parameter) for choosing a put mode.
  /// /// @param id non-zero
  /// /// @param mode Changes the put semantics to the given mode, e.g. OBXPutMode_INSERT or OBXPutMode_UPDATE.
  /// /// @returns OBX_SUCCESS if the put operation was successful
  /// /// @returns OBX_ERROR_ID_ALREADY_EXISTS OBXPutMode_INSERT was used, but an existing object was found using the given ID
  /// /// @returns OBX_ERROR_ID_NOT_FOUND OBXPutMode_UPDATE was used, but no object was found for the given ID
  int cursor_put4(
    ffi.Pointer<OBX_cursor> cursor,
    int id,
    ffi.Pointer<ffi.Void> data,
    int size,
    int mode,
  ) {
    _cursor_put4 ??= _dylib
        .lookupFunction<_c_cursor_put4, _dart_cursor_put4>('obx_cursor_put4');
    return _cursor_put4(
      cursor,
      id,
      data,
      size,
      mode,
    );
  }

  _dart_cursor_put4 _cursor_put4;
